[package]
name = "truthlens"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.6"
sp1-sdk = "4.0.0"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
hex = "0.4.3"
serde_json = "1.0"
rlimit = "0.9"

[env]
SP1_ELF_truthlens = { value = "truthlens"}